--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,5 +1,7 @@
 .navbar {
-    position: fixed;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
     width: 100%;
     background-color: #333;
     padding: 15px 20px;
