--- a/src/Pages/SkillsPage/SkillsPage.css
+++ b/src/Pages/SkillsPage/SkillsPage.css
@@ -1,5 +1,38 @@
-.container {
+.skill-page-container {
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 30px;
+}
+
+.section-header{
+    text-align: center;
+}
+
+.skill-container {
+    margin-top: 30px;
+}
+
+.skill-title {
+    margin: 0;
+}
+
+.skill-description {
+    margin: 0;
+}
+
+.experience-section {
     display: flex;
-    justify-content: space-evenly;
-    height: 100vh;
+    flex-direction: column;
+    padding-top: 50px;
+}
+
+.experience-container{
+    align-self: center;
+    width: 66.67%;
+    padding: 20px;
+    margin-top: 20px;
+    background-color: #222; /* Dark background */
+    color: white;
+    border-radius: 12px; /* Rounded corners */
+    box-shadow: 0px 4px 10px rgba(0, 255, 255, 0.5); /* Soft cyan glow */
 }
