--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-    height: 100hv;
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
@@ -12,6 +11,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+html, body {
     margin: 0;
+    padding: 0;
 }
