--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -19,10 +19,12 @@
   .nav-links {
     display: flex;
     list-style: none;
+    justify-content: space-around; /* Distributes all links evenly */
+    width: 100%;
     padding: 0;
     margin: 0;
-    gap: 80px; /* space between items */
   }
+  
   
   /* Each link style */
   .nav-links li a {
