--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -6,6 +6,7 @@
     justify-content: center; /* centers nav-container */
     align-items: center;
     padding: 14px 0;
+    border-bottom: 1px solid #444;
   }
   
   /* Wrapper for nav links */
