--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -25,6 +25,12 @@
     border-bottom: 1px solid #ddd; 
 }
 
+.experience-button-container button.active {
+    color: white;
+    font-weight: bold;
+    border-bottom: 2px solid white;
+}
+
 .content {
     flex: 1;
 }
