--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -21,8 +21,9 @@
     text-align: center;
 }
 
-.experience-button-container button:hover, .experience-button-container button.active {
-    border-bottom: 1px solid #ddd; 
+.experience-button-container button:hover {
+    border-bottom: 1px solid #ddd;
+}
 }
 
 .experience-button-container button.active {
