--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -11,7 +11,6 @@
 .experience-button-container button {
     background: none;
     border: none;
-    color: white;
     padding: 10px;
     margin: 0px 5px 0px 5px;
     cursor: pointer;
@@ -19,17 +18,14 @@
     width: 100%;
     font-size: 16px;
     text-align: center;
+    color: #ccc;
 }
 
-.experience-button-container button:hover {
-    border-bottom: 1px solid #ddd;
-}
-}
-
+.experience-button-container button:hover,
 .experience-button-container button.active {
     color: white !important;
-    font-weight: bold;
     border-bottom: 2px solid white;
+    font-weight: bold;
 }
 
 .content {
