--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -18,7 +18,7 @@
     width: 100%;
     font-size: 16px;
     text-align: center;
-    color: #ccc;
+    color: #ccc !important;
 }
 
 .experience-button-container button:hover,
