--- a/src/Pages/BackgroundPage/BackgroundPage.css
+++ b/src/Pages/BackgroundPage/BackgroundPage.css
@@ -4,7 +4,7 @@
     padding-top: 50px;
 }
 
-.experience-container{
+.experience-button-container{
     align-self: center;
     width: 90%;
     padding: 20px;
