--- a/src/Pages/ProjectsPage/ProjectsPage.css
+++ b/src/Pages/ProjectsPage/ProjectsPage.css
@@ -15,6 +15,7 @@
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
     color: white;
+    margin-bottom: 24px;
   }
   
   .project-title {
