--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -11,7 +11,7 @@
 .experience-button-container button {
     all: unset;
     color: white !important;
-    background: none;
+    background-color: #2c2c2c;
     border: none;
     padding: 10px;
     margin: 0px 5px 0px 5px;
@@ -22,15 +22,13 @@
     text-align: center;
 }
 
-.experience-button-container button.active {
-    color: white !important;
-    font-weight: bold;
-    border-bottom: 2px solid white;
+.experience-button-container button:hover {
+    background-color: #3a3b3c;
 }
 
-.experience-button-container button:hover {
-    color: white !important;
-    border-bottom: 1px solid white;
+.experience-button-container button.active {
+    background-color: #3a3b3c;
+    font-weight: bold;
 }
 
 .content {
