--- a/src/Components/Certifications/Certifications.css
+++ b/src/Components/Certifications/Certifications.css
@@ -1,45 +1,44 @@
-.achievement-grid-container {
+.certification-grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 24px;
     max-width: 1080px;
     margin: 0 auto;
     padding: 20px;
-  }
+}
 
-.achievement-grid-item {
+.certification-grid-item {
     background-color: #3A3B3C;
     padding: 20px;
     text-align: center;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* optional subtle depth */
-}
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
+}
 
-  .achievement-grid-item img {
+.certification-grid-item img {
     max-height: 140px;
     width: auto;
     margin-bottom: 15px;
     object-fit: contain;
-  }
+}
 
-.pdf-link{
+.pdf-link {
     text-decoration: none;
     color: white;
 }
 
 @media (max-width: 900px) {
-    .achievement-grid-container {
+    .certification-grid-container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 600px) {
-    .achievement-grid-container {
+    .certification-grid-container {
         grid-template-columns: 1fr;
     }
 }
