--- a/src/Pages/BackgroundPage/BackgroundPage.css
+++ b/src/Pages/BackgroundPage/BackgroundPage.css
@@ -1,10 +1,10 @@
-.content-section{
+.content-section {
     display: flex;
     flex-direction: column;
     padding-top: 50px;
 }
 
-.experience-button-container{
+.career-timeline-button-container {
     align-self: center;
     width: 90%;
     padding: 20px;
@@ -26,37 +26,37 @@
     margin-right: auto;
 }
 
-.education-card{
+.education-card {
     max-width: 1000px;
     align-self: center;
     width: 100%;
     padding: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: #222; /* Dark background */
+    background-color: #222;
     color: white;
-    border-radius: 12px; /* Rounded corners */
-    box-shadow: 0px 4px 30px rgba(0, 255, 255, 0.1); /* Soft cyan glow */
+    border-radius: 12px;
+    box-shadow: 0px 4px 30px rgba(0, 255, 255, 0.1);
 }
 
-.education-card-head{
+.education-card-head {
     display: flex;
     justify-content: space-between;
 }
 
-.education-card-head-title{
+.education-card-head-title {
     margin-bottom: 0;
 }
 
-.education-date{
+.education-date {
     margin-bottom: 0;
     align-self: flex-end;
 }
 
-.education-location{
+.education-location {
     margin-top: 0;
 }
 
-.education-list{
+.education-list {
     list-style-type: circle;
 }
