--- a/src/Pages/SkillsPage/SkillsPage.css
+++ b/src/Pages/SkillsPage/SkillsPage.css
@@ -27,7 +27,7 @@
     padding-top: 50px;
 }
 
-.experience-container{
+.career-timeline-container{
     align-self: center;
     width: 90%;
     padding: 20px;
