--- a/src/Components/CareerTimeline.css
+++ b/src/Components/CareerTimeline.css
@@ -1,32 +1,31 @@
-.experience-page-container {
+.career-timeline-page-container {
     max-width: 1000px;
     margin: auto;
 }
 
-.experience-button-container {
+.career-timeline-button-container {
     display: flex;
     flex-direction: row;
 }
 
-.experience-button-container button {
+.career-timeline-button-container button {
     all: unset;
     color: white !important;
     background-color: #2c2c2c;
     border: none;
     padding: 10px;
-    margin: 0px 5px 0px 5px;
+    margin: 0 5px;
     cursor: pointer;
-    text-align: left;
     width: 100%;
     font-size: 16px;
     text-align: center;
 }
 
-.experience-button-container button:hover {
+.career-timeline-button-container button:hover {
     background-color: #3a3b3c;
 }
 
-.experience-button-container button.active {
+.career-timeline-button-container button.active {
     background-color: #3a3b3c;
     font-weight: bold;
 }
@@ -36,11 +35,11 @@
 }
 
 .content h2 {
-    margin: 10px 0px 0px 0px;
+    margin: 10px 0 0;
 }
 
 .content-dates {
-    margin: 0px;
+    margin: 0;
     font-size: 16px;
 }
 
@@ -48,7 +47,8 @@ ul {
     position: relative;
     list-style: none;
 }
-.work-experience-list{
+
+.work-experience-list {
     margin-bottom: 5px;
 }
 
