--- a/src/Pages/SkillsPage/SkillsPage.css
+++ b/src/Pages/SkillsPage/SkillsPage.css
@@ -1,8 +1,7 @@
 .skill-page-container {
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 30px;
-    margin-bottom: 80px;
+    max-width: 1200px;
+    margin: 30px auto 80px auto;
+    padding: 0 1rem; 
 }
 
 .section-header{
