--- a/src/Pages/SkillsPage/SkillsPage.css
+++ b/src/Pages/SkillsPage/SkillsPage.css
@@ -1,3 +1,9 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 .skill-page-container {
     max-width: 1200px;
     margin: 30px auto 80px auto;
