--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -25,6 +25,8 @@
 /* Navigation links */
 .nav-links {
   display: flex;
+  justify-content: center;
+  align-items: center;
   list-style: none;
   padding: 0;
   margin: 0;
