--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -27,6 +27,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 40px;
   list-style: none;
   padding: 0;
   margin: 0;
